# Time_registry_webversion

./: .env.example  .gitignore  .gitignore.swp  .pylintrc  .~lock.Handleiding Google Drive koppelen.odt#  DEPLOYMENT.md  Dockerfile  Handleiding Google Drive koppelen.odt  Makefile  Makefile.md  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup-traefik.sh
djangoproject/: db.sqlite3
djangoproject/djangoproject/: log_config.py  settings.py  urls.py
djangoproject/djangoproject/accounts/: backends.py
djangoproject/djangoproject/templates/: base.html
djangoproject/djangoproject/templates/emails/: api_token_email.html  api_token_email.txt
djangoproject/docs/: CUSTOMER_API.md
djangoproject/scripts/: fetch_project_status.py
djangoproject/time_reg_web/: admin.py  apps.py  celery.py  forms.py  google_drive_service.py  mixins.py  models.py  tasks.py  urls.py  views.py
djangoproject/time_reg_web/migrations/: 0001_initial.py  0002_alter_customer_customer_id_and_more.py  0003_alter_project_project_id_and_more.py  0004_alter_timeregistry_end_time.py  0005_alter_timeregistry_end_time_and_more.py  0006_company_members_alter_userprofile_company.py  0007_divisies_milstones_divisie_timeregistry_divisie_and_more.py  0008_todo_milestone.py  0009_company_google_service_account_json_and_more.py  0010_company_google_client_id_and_more.py  0011_remove_company_google_client_secret_and_more.py  0012_apitoken.py  0013_apitokenusage.py
djangoproject/time_reg_web/templates/: base.html  home.html
(+23 files in other folders)
