[project]
name = "time-registry-webversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2026.1.4",
    "decouple>=0.0.7",
    "django>=6.0",
    "django-q2>=1.9.0",
    "openpyxl>=3.1.5",
    "psycopg>=3.3.2",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.1",
]
