[project]
name = "time-registry-webversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2026.1.4",
    "cryptography>=48.0.0",
    "decouple>=0.0.7",
    "django>=6.0",
    "django-q2>=1.9.0",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "gunicorn>=25.1.0",
    "openpyxl>=3.1.5",
    "psycopg>=3.3.2",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.1",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "pylint>=4.0.6",
]
